<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SEOMIN</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="gps_disabled">GPS is disabled. Click Here!</string>
    <string name="title_speed">SPEED</string>
    <string name="title_avg_speed">AVG SPEED</string>
    <string name="title_max_speed">MAX SPEED</string>
    <string name="title_altitude">ALTITUDE</string>
    <string name="title_distance">DISTANCE</string>
    <string name="title_travel_time">TRAVEL TIME</string>
    <string name="title_strava_status">STRAVA</string>
    <string name="title_tires">TIRES</string>
    <string name="title_tire_circumference">TIRE CIRCUMFERENCE</string>
    <string name="title_chainring">CHAINRING</string>
    <string name="title_sprocket">SPROCKET</string>
    <string name="title_cadence">CADENCE</string>

    <string name="unit_kmh">KM/H</string>
    <string name="unit_m">M</string>
    <string name="unit_km">KM</string>
    <string name="unit_mm">MM</string>
    <string name="default_value_m">000</string>
    <string name="default_value_km">0.0</string>
    <string name="default_value_kmh">00.0</string>
    <string name="alert_title">ALERT</string>
    <string name="alert_reset">Do you want to reset?</string>
    <string name="alert_confirm">Confirm</string>
    <string name="alert_cancel">Cancel</string>
    <string name="ride_info_default">--</string>
    <string name="progress_loading">Loading...</string>
    <string name="menu_riding">Riding</string>
    <string name="menu_riding_list">Riding List</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_display_test">Display</string>
    <string name="menu_display_result">Display Result</string>
    <string name="menu_gear">Gear</string>
    <string name="menu_riding_new">Riding New</string>
    <string name="display_button_add">ADD</string>
    <string name="display_button_clear">CLEAR</string>
    <string name="display_button_clear_all">CLEAR ALL</string>

    <string name="colon">:</string>
    <string name="error_not_square">Selected area not square.</string>
    <string name="error_width_short">Width should be longer or equal height.</string>
    <string name="error_used_cell">The cell is already used.</string>
</resources>
