<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:keepScreenOn="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <!-- Top start -->

    <LinearLayout
        android:id="@+id/id_ll_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/id_iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_white_36dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/id_iv_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_more_vert_white_36dp" />
    </LinearLayout>
    <!-- Top end -->


    <!-- Menu start -->

    <RelativeLayout
        android:id="@+id/id_ll_menu"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_ll_head"
        android:layout_alignParentRight="true"
        android:background="#666666"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/id_tv_riding"
                style="@style/menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_riding" />

            <TextView
                android:id="@+id/id_tv_riding_list"
                style="@style/menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_riding_list" />

            <TextView
                android:id="@+id/id_tv_setting"
                style="@style/menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_setting" />

            <TextView
                android:id="@+id/id_tv_display_test"
                style="@style/menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_display_test" />
            
            <TextView
                android:id="@+id/id_tv_display_result"
                style="@style/menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_display_result" />

            <TextView
                android:id="@+id/id_tv_gear"
                style="@style/menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_gear" />

            <TextView
                android:id="@+id/id_tv_riding_new"
                style="@style/menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_riding_new" />
            
        </LinearLayout>
    </RelativeLayout>
    <!-- Menu end -->

</RelativeLayout>