<FrameLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/net.gringrid.pedal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:keepScreenOn="true"
    tools:context="net.gringrid.pedal.activity.DisplayTest" >

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    >
	    <FrameLayout
		    android:id="@+id/id_fl_base"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" 
	        >
	        
	    </FrameLayout>

	    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/id_tv_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />
        </LinearLayout> 

	    <!-- ICON START -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/id_tv_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/display_button_add"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/id_tv_clear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/display_button_clear"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/id_tv_clear_all"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/display_button_clear_all"
                android:textSize="20sp" />
        </LinearLayout>
        <!-- ICON END -->

	</LinearLayout> 

</FrameLayout>