<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/net.gringrid.pedal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.gringrid.pedal.activity.HomeActivity" >

    <LinearLayout
        style="@style/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <!-- Ride button start -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_tires" />
            <TextView
                android:id="@+id/id_tv_tires"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_tire_circumference" />
            <TextView
                android:id="@+id/id_tv_tire_circumference"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_chainring" />
            <TextView
                android:id="@+id/id_tv_chainring"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                />
        </LinearLayout>

        <SeekBar
            android:id="@+id/id_sb_chainring"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="44"
            android:progress="14"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
			/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_sprocket" />
            <TextView
                android:id="@+id/id_tv_sprocket"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                />
        </LinearLayout>
        <SeekBar
            android:id="@+id/id_sb_sprocket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="32"
            android:progress="6"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
			/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_cadence" />
            <TextView
                android:id="@+id/id_tv_cadence"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                />
        </LinearLayout>
        <SeekBar 
            android:id="@+id/id_sb_cadence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="220"
            android:progress="80"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
			/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_speed" />
            <TextView
                android:id="@+id/id_tv_speed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                />
        </LinearLayout>
        <SeekBar 
            android:id="@+id/id_sb_spped"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="35"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
			/>
        <!-- Ride button end -->

    </LinearLayout>

    <net.gringrid.pedal.view.HeaderView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:id_iv_back_visibility="GONE" />

</FrameLayout>